Handling Alerts and Windows

--- a/configs/config.properties
+++ b/configs/config.properties
@@ -1,5 +1,6 @@
 browser=chrome
 #url=https://opensource-demo.orangehrmlive.com/
-url=http://uitestpractice.com/Students/Form
+#url=http://uitestpractice.com/Students/Form
+url=http://www.seleniumframework.com/practiceform/
 username=Admin
 password=admin123
