Dropdowns and Waits in Selenium

--- a/configs/config.properties
+++ b/configs/config.properties
@@ -1,6 +1,9 @@
 browser=chrome
 #url=https://opensource-demo.orangehrmlive.com/
 #url=http://uitestpractice.com/Students/Form
-url=http://www.seleniumframework.com/practiceform/
+#url=http://www.seleniumframework.com/practiceform/
+#url=https://the-internet.herokuapp.com/iframe
+#url=https://demo.anhtester.com/jquery-download-progress-bar-demo.html
+url=https://the-internet.herokuapp.com/dropdown
 username=Admin
 password=admin123
