--- a/configs/config.properties
+++ b/configs/config.properties
@@ -4,6 +4,7 @@ browser=chrome
 #url=http://www.seleniumframework.com/practiceform/
 #url=https://the-internet.herokuapp.com/iframe
 #url=https://demo.anhtester.com/jquery-download-progress-bar-demo.html
-url=https://the-internet.herokuapp.com/dropdown
+#url=https://the-internet.herokuapp.com/dropdown
+url=http://testingpool.com/data-types-in-java/
 username=Admin
 password=admin123
