Selenium Review04 Completed

--- a/configs/config.properties
+++ b/configs/config.properties
@@ -5,6 +5,11 @@ browser=chrome
 #url=https://the-internet.herokuapp.com/iframe
 #url=https://demo.anhtester.com/jquery-download-progress-bar-demo.html
 #url=https://the-internet.herokuapp.com/dropdown
-url=http://testingpool.com/data-types-in-java/
+#url=http://testingpool.com/data-types-in-java/
+#url=https://the-internet.herokuapp.com/tables
+#url=http://secure.smartbearsoftware.com/samples/testcomplete11/WebOrders/login.aspx
+url=https://jqueryui.com/datepicker/
 username=Admin
 password=admin123
+login=Tester
+pass=test
