--- a/configs/config.properties
+++ b/configs/config.properties
@@ -8,7 +8,9 @@ browser=chrome
 #url=http://testingpool.com/data-types-in-java/
 #url=https://the-internet.herokuapp.com/tables
 #url=http://secure.smartbearsoftware.com/samples/testcomplete11/WebOrders/login.aspx
-url=https://jqueryui.com/datepicker/
+#url=https://jqueryui.com/datepicker/
+#url=http://uitestpractice.com/Students/Actions
+url=http://uitestpractice.com/Students/Widgets
 username=Admin
 password=admin123
 login=Tester
